fix: textCommon overflow

--- a/src/main/resources/web/assets/css/rb-page.css
+++ b/src/main/resources/web/assets/css/rb-page.css
@@ -4691,13 +4691,6 @@ pre.unstyle {
   padding-bottom: 15px;
 }
 
-/*
-.protable.rb-scroller.ps-active-x {
-  overflow: auto !important;
-  overflow-x: hidden !important;
-}
-*/
-
 .protable .form-group {
   margin: 0;
   padding: 0;
